Fix undergraduate institution

--- a/index.html
+++ b/index.html
@@ -167,26 +167,19 @@
             dedicated myself to learning systems optimization, software development,
             and data science to help improve our water systems.</p>
 
-          <p>Currently a member of the <a href="https://www.colorado.edu/lab/krg/group">Kaspryzk Research group</a>,
+          <p>Currently a member of the <a href="https://www.colorado.edu/lab/krg/group">Kaspryzk Research Group</a>,
             I expect to complete my PhD early this summer.
             Please contact me if you know of an opportunity that
             may fit my skills/interests.</p>
 
           <div class="row">
-
-
             <div class="col-sm-5">
               <h3>Interests</h3>
               <ul class="ul-interests">
-
                 <li>Systems optimization</li>
-
                 <li>Water treatment modeling</li>
-
                 <li>Data science and visualization</li>
-
                 <li>Water resources management</li>
-
               </ul>
             </div>
 
@@ -206,7 +199,7 @@
                   <i class="fa-li fa fa-graduation-cap"></i>
                   <div class="description">
                     <p class="course">BS in Civil Engineering, 2014</p>
-                    <p class="institution">University of Colorado Boulder</p>
+                    <p class="institution">University of Notre Dame</p>
                   </div>
                 </li>
 
