--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             dedicated myself to learning systems optimization, software development,
             and data science to help improve our water systems.</p>
 
-          <p>Currently a member of the <a href="https://www.colorado.edu/lab/krg/group">Kaspryzk Research Group</a>,
+          <p>Currently a member of the <a href="https://www.colorado.edu/lab/krg/group">Kasprzyk Research Group</a>,
             I expect to complete my PhD early this summer.
             Please contact me if you know of an opportunity that
             may fit my skills/interests.</p>
