--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             <div class="portrait-title">
               <h2 itemprop="name">William Raseman</h2>
-              <h3 itemprop="jobTitle">Graduate Research Assistant</h3>
+              <h3 itemprop="jobTitle">Digital Strategies and Solutions</h3>
 
 
 
@@ -123,7 +123,7 @@
 
               <h3 itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
 
-          <span itemprop="name">University of Colorado Boulder</span>
+          <span itemprop="name">Hazen and Sawyer</span>
 
         </h3>
 
@@ -172,18 +172,14 @@
             dedicated myself to learning systems optimization, software development,
             and data science to help improve our water systems.</p>
 
-          <p> Formerly a member of the <a href="https://www.colorado.edu/lab/krg/group">Kasprzyk Research Group</a>, I finished my
-            PhD in Summer 2019. I start work at <a href="https://www.hazenandsawyer.com/">Hazen & Sawyer</a> Denver this Fall
-              and we are actively looking for collaborators in the Intelligent Water Systems space.
-              Please connect with me and let's get a conversation going!</p>
-
           <div class="row">
             <div class="col-sm-5">
               <h3>Interests</h3>
               <ul class="ul-interests">
-                <li>Systems optimization</li>
-                <li>Water treatment modeling</li>
                 <li>Data science and visualization</li>
+                <li>Systems modeling and optimization</li>
+                <li>Water treatment</li>
+                <li>Potable reuse</li>
                 <li>Water resources management</li>
               </ul>
             </div>
@@ -239,7 +235,7 @@
 
             <li>
               <i class="fa-li fa fa-map-marker fa-2x" aria-hidden="true"></i>
-              <span id="person-address" itemprop="address">Boulder, CO</span>
+              <span id="person-address" itemprop="address">Chicago, IL</span>
             </li>
           </ul>
         </div>
